[package]
name = "new_flattened"
version = "0.1.0"
authors = ["Hirochika Matsumoto <matsujika@gmail.com>"]
edition = "2018"
description = "Macro to flatten nested calls of `new`s"
repository = "https://github.com/matsujika/new_flattened"
license = "MIT OR Apache-2.0"
keywords = ["macro"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
